# jhinno-appform-sdk

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  README.md  examples.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
appform_sdk/: __init__.py  apps.py  auth.py  cli.py  client.py  compute.py  config.py  exceptions.py  extensions.py  files.py  formatters.py  job_profiles.py  job_submit.py  jobs.py  models.py  organization.py  output_templates.yaml  registry.py  sessions.py  sftp.py  utils.py  xml2table.py
appform_sdk/cli/: __init__.py  builders.py  cmd_apps.py  cmd_auth.py  cmd_config.py  cmd_departments.py  cmd_endpoint.py  cmd_extension.py  cmd_files.py  cmd_jobs.py  cmd_sessions.py  cmd_users.py  common.py  job_submit.py  main.py
appform_sdk/completions/: appform-completion.bash  appform-completion.fish  appform-completion.zsh
appform_sdk/man/man1/: appform-zh.1  appform.1  job_submit-zh.1
appform_sdk/man/man3/: appform-sdk-zh.3  appform-sdk.3
docs/: README.md  apps.md  authentication.md  cli.md  configuration.md  error-handling.md  extensions.md  files.md  job-profiles.md  job-submit.md  jobs.md  organization.md  sessions.md  xml2table.md
docs/man/: appform-sdk-zh.3  appform-sdk.3  appform-zh.1  appform.1  job_submit-zh.1  job_submit.1
extensions/: appform-6.6.json  appform-versions.json
scripts/: fix_bundle.py  fix_manylinux.py
skills/appform-cli/: SKILL.md
skills/appform-cli/apps/: fluent.md  ls-dyna.md  mpi.md  starccm.md
skills/appform-cli/reference/: apps.md  commands.md  jsub_R_resource_requirements.md  scheduler-manual.md  scheduler.md
skills/appform-sdk/: SKILL.md
tests/: __init__.py  test_cli.py  test_compute.py  test_coverage_gaps.py  test_extensions.py  test_files.py  test_files_edge_cases.py  test_formatters.py  test_job_profiles.py  test_job_submit.py  test_jobs.py  test_models.py  test_organization.py  test_registry.py  test_sdk.py  test_sessions.py  test_sftp.py  test_utils.py  test_xml2table.py
(+1 files in other folders)
